--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
+
+
 
     <!-- Newsletter -->
     <script id="mcjs">
@@ -42,7 +45,39 @@
 
 <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+
+
+
+        <!-- <div class=" chatbot-box ">
+            <div class="chatbox">
+                <div class="chatbox__support">
+                    <div class="chatbox__header">
+                        <div class="chatbox__image--header">
+                            <img src="https://img.icons8.com/color/48/000000/circled-user-female-skin-type-5--v1.png" alt="image" />
+                        </div>
+                        <div class="chatbox__content--header">
+                            <h4 class="chatbox__heading--header">Chat support | Aiceto</h4>
+                            <p class="chatbox__description--header">Hi. My name is Moonly. How can I help you?</p>
+                        </div>
+                    </div>
+                    <div class="chatbox__messages">
+                        <div></div>
+                    </div>
+                    <div class="chatbox__footer">
+                        <input type="text" placeholder="Write a message..." />
+                        <button class="chatbox__send--footer send__button">Send</button>
+                    </div>
+                </div>
+            </div>
+            <div class="chatbox__button">
+                <a class="hvr-float" href="#Contact" rel="noopener" aria-label="Contact" id="Aichatbtn"><strong>Let's
+                Talk!</strong></a>
+            </div>
+        </div> -->
+
+
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -55,7 +90,7 @@
     -->
 
 
-
+    <!-- <script src="./app.js"></script> -->
 </body>
 
 </html>
